littleDuck2020CParser.py
# Generated from littleDuck2020C.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class littleDuck2020CParser ( Parser ):

    grammarFileName = "littleDuck2020C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "'*'", "'/'", "'+'", 
                     "'-'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','", 
                     "'print'", "'if'", "'else'", "'='", "'>'", "'<'", "'<>'", 
                     "'int'", "'float'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "VAR", "MULT", "DIV", "PLUS", 
                      "MINUS", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "SEMI", "COLON", "COMMA", "PRINT", "IF", "ELSE", "EQ", 
                      "GT", "LT", "NE", "TYPE_INT", "TYPE_FLOAT", "COMMENT", 
                      "WS", "IDENTIFIER", "INT", "FLOAT", "STRING" ]

    RULE_programa = 0
    RULE_programa_vars = 1
    RULE_r_vars = 2
    RULE_r_vars_1 = 3
    RULE_r_vars_2 = 4
    RULE_r_vars_3 = 5
    RULE_r_vars_4 = 6
    RULE_tipo = 7
    RULE_bloque = 8
    RULE_bloque_1 = 9
    RULE_estatuto = 10
    RULE_asignacion = 11
    RULE_expresion = 12
    RULE_expresion_1 = 13
    RULE_exp = 14
    RULE_exp_1 = 15
    RULE_termino = 16
    RULE_termino_1 = 17
    RULE_factor = 18
    RULE_factor_1 = 19
    RULE_factor_2 = 20
    RULE_var_cte = 21
    RULE_condicion = 22
    RULE_condicion_1 = 23
    RULE_escritura = 24
    RULE_escritura_1 = 25
    RULE_escritura_2 = 26

    ruleNames =  [ "programa", "programa_vars", "r_vars", "r_vars_1", "r_vars_2", 
                   "r_vars_3", "r_vars_4", "tipo", "bloque", "bloque_1", 
                   "estatuto", "asignacion", "expresion", "expresion_1", 
                   "exp", "exp_1", "termino", "termino_1", "factor", "factor_1", 
                   "factor_2", "var_cte", "condicion", "condicion_1", "escritura", 
                   "escritura_1", "escritura_2" ]

    EOF = Token.EOF
    PROGRAM=1
    VAR=2
    MULT=3
    DIV=4
    PLUS=5
    MINUS=6
    LPAREN=7
    RPAREN=8
    LBRACKET=9
    RBRACKET=10
    SEMI=11
    COLON=12
    COMMA=13
    PRINT=14
    IF=15
    ELSE=16
    EQ=17
    GT=18
    LT=19
    NE=20
    TYPE_INT=21
    TYPE_FLOAT=22
    COMMENT=23
    WS=24
    IDENTIFIER=25
    INT=26
    FLOAT=27
    STRING=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(littleDuck2020CParser.PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(littleDuck2020CParser.IDENTIFIER, 0)

        def SEMI(self):
            return self.getToken(littleDuck2020CParser.SEMI, 0)

        def programa_vars(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Programa_varsContext,0)


        def bloque(self):
            return self.getTypedRuleContext(littleDuck2020CParser.BloqueContext,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = littleDuck2020CParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(littleDuck2020CParser.PROGRAM)
            self.state = 55
            self.match(littleDuck2020CParser.IDENTIFIER)
            self.state = 56
            self.match(littleDuck2020CParser.SEMI)
            self.state = 57
            self.programa_vars()
            self.state = 58
            self.bloque()
            print("Sintaxis valida!");
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r_vars(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_varsContext,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_programa_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma_vars" ):
                listener.enterPrograma_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma_vars" ):
                listener.exitPrograma_vars(self)




    def programa_vars(self):

        localctx = littleDuck2020CParser.Programa_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa_vars)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.r_vars()
                pass
            elif token in [littleDuck2020CParser.LBRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(littleDuck2020CParser.VAR, 0)

        def r_vars_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_r_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_vars" ):
                listener.enterR_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_vars" ):
                listener.exitR_vars(self)




    def r_vars(self):

        localctx = littleDuck2020CParser.R_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_r_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(littleDuck2020CParser.VAR)
            self.state = 66
            self.r_vars_1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_vars_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r_vars_2(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_2Context,0)


        def COLON(self):
            return self.getToken(littleDuck2020CParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(littleDuck2020CParser.TipoContext,0)


        def SEMI(self):
            return self.getToken(littleDuck2020CParser.SEMI, 0)

        def r_vars_4(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_4Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_r_vars_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_vars_1" ):
                listener.enterR_vars_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_vars_1" ):
                listener.exitR_vars_1(self)




    def r_vars_1(self):

        localctx = littleDuck2020CParser.R_vars_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_r_vars_1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.r_vars_2()
            self.state = 69
            self.match(littleDuck2020CParser.COLON)
            self.state = 70
            self.tipo()
            self.state = 71
            self.match(littleDuck2020CParser.SEMI)
            self.state = 72
            self.r_vars_4()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_vars_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(littleDuck2020CParser.IDENTIFIER, 0)

        def r_vars_3(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_3Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_r_vars_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_vars_2" ):
                listener.enterR_vars_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_vars_2" ):
                listener.exitR_vars_2(self)




    def r_vars_2(self):

        localctx = littleDuck2020CParser.R_vars_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_r_vars_2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(littleDuck2020CParser.IDENTIFIER)
            self.state = 75
            self.r_vars_3()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_vars_3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(littleDuck2020CParser.COMMA, 0)

        def r_vars_2(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_2Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_r_vars_3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_vars_3" ):
                listener.enterR_vars_3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_vars_3" ):
                listener.exitR_vars_3(self)




    def r_vars_3(self):

        localctx = littleDuck2020CParser.R_vars_3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_r_vars_3)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(littleDuck2020CParser.COMMA)
                self.state = 78
                self.r_vars_2()
                pass
            elif token in [littleDuck2020CParser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_vars_4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r_vars_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.R_vars_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_r_vars_4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_vars_4" ):
                listener.enterR_vars_4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_vars_4" ):
                listener.exitR_vars_4(self)




    def r_vars_4(self):

        localctx = littleDuck2020CParser.R_vars_4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_r_vars_4)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.r_vars_1()
                pass
            elif token in [littleDuck2020CParser.LBRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_INT(self):
            return self.getToken(littleDuck2020CParser.TYPE_INT, 0)

        def TYPE_FLOAT(self):
            return self.getToken(littleDuck2020CParser.TYPE_FLOAT, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = littleDuck2020CParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==littleDuck2020CParser.TYPE_INT or _la==littleDuck2020CParser.TYPE_FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(littleDuck2020CParser.LBRACKET, 0)

        def bloque_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Bloque_1Context,0)


        def RBRACKET(self):
            return self.getToken(littleDuck2020CParser.RBRACKET, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = littleDuck2020CParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(littleDuck2020CParser.LBRACKET)
            self.state = 89
            self.bloque_1()
            self.state = 90
            self.match(littleDuck2020CParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloque_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(littleDuck2020CParser.EstatutoContext,0)


        def bloque_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Bloque_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_bloque_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque_1" ):
                listener.enterBloque_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque_1" ):
                listener.exitBloque_1(self)




    def bloque_1(self):

        localctx = littleDuck2020CParser.Bloque_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bloque_1)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.PRINT, littleDuck2020CParser.IF, littleDuck2020CParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.estatuto()
                self.state = 93
                self.bloque_1()
                pass
            elif token in [littleDuck2020CParser.RBRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(littleDuck2020CParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(littleDuck2020CParser.CondicionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(littleDuck2020CParser.EscrituraContext,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = littleDuck2020CParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_estatuto)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.asignacion()
                pass
            elif token in [littleDuck2020CParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.condicion()
                pass
            elif token in [littleDuck2020CParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.escritura()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(littleDuck2020CParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(littleDuck2020CParser.EQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(littleDuck2020CParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(littleDuck2020CParser.SEMI, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = littleDuck2020CParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(littleDuck2020CParser.IDENTIFIER)
            self.state = 104
            self.match(littleDuck2020CParser.EQ)
            self.state = 105
            self.expresion()
            self.state = 106
            self.match(littleDuck2020CParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(littleDuck2020CParser.ExpContext,0)


        def expresion_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Expresion_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = littleDuck2020CParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.exp()
            self.state = 109
            self.expresion_1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(littleDuck2020CParser.GT, 0)

        def exp(self):
            return self.getTypedRuleContext(littleDuck2020CParser.ExpContext,0)


        def LT(self):
            return self.getToken(littleDuck2020CParser.LT, 0)

        def NE(self):
            return self.getToken(littleDuck2020CParser.NE, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_expresion_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion_1" ):
                listener.enterExpresion_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion_1" ):
                listener.exitExpresion_1(self)




    def expresion_1(self):

        localctx = littleDuck2020CParser.Expresion_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expresion_1)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.GT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(littleDuck2020CParser.GT)
                self.state = 112
                self.exp()
                pass
            elif token in [littleDuck2020CParser.LT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(littleDuck2020CParser.LT)
                self.state = 114
                self.exp()
                pass
            elif token in [littleDuck2020CParser.NE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(littleDuck2020CParser.NE)
                self.state = 116
                self.exp()
                pass
            elif token in [littleDuck2020CParser.RPAREN, littleDuck2020CParser.SEMI, littleDuck2020CParser.COMMA]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(littleDuck2020CParser.TerminoContext,0)


        def exp_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Exp_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = littleDuck2020CParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.termino()
            self.state = 121
            self.exp_1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(littleDuck2020CParser.PLUS, 0)

        def exp(self):
            return self.getTypedRuleContext(littleDuck2020CParser.ExpContext,0)


        def MINUS(self):
            return self.getToken(littleDuck2020CParser.MINUS, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_exp_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_1" ):
                listener.enterExp_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_1" ):
                listener.exitExp_1(self)




    def exp_1(self):

        localctx = littleDuck2020CParser.Exp_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_exp_1)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuck2020CParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(littleDuck2020CParser.PLUS)
                self.state = 124
                self.exp()
                pass
            elif token in [littleDuck2020CParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(littleDuck2020CParser.MINUS)
                self.state = 126
                self.exp()
                pass
            elif token in [littleDuck2020CParser.RPAREN, littleDuck2020CParser.SEMI, littleDuck2020CParser.COMMA, littleDuck2020CParser.GT, littleDuck2020CParser.LT, littleDuck2020CParser.NE]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(littleDuck2020CParser.FactorContext,0)


        def termino_1(self):
            return self.getTypedRuleContext(littleDuck2020CParser.Termino_1Context,0)


        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = littleDuck2020CParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_termino)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.factor()
            self.state = 131
            self.termino_1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Termino_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(littleDuck2020CParser.MULT, 0)

        def termino(self):
            return self.getTypedRuleContext(littleDuck2020CParser.TerminoContext,0)


        def DIV(self):
            return self.getToken(littleDuck2020CParser.DIV, 0)

        def getRuleIndex(self):
            return littleDuck2020CParser.RULE_termino_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino_1" ):
                listener.enterTermino_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino_1" ):
                listener.exitTermino_1(self)




    def termino_1(self):
